--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI Pipeline
 on:
   push:
     branches:
+      - 'feature/**'
+      - 'bugfix/**'
   # Habilita o gatilho manual através da interface do Github Actions
   workflow_dispatch:
 
